Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/literals/BadBinaryLiterals.7.out
BadBinaryLiterals.java:10:24: compiler.err.expected: ';'
BadBinaryLiterals.java:12:21: compiler.err.int.number.too.large: 111111111111111111111111111111111
BadBinaryLiterals.java:14:21: compiler.err.int.number.too.large: 11111111111111111111111111111111111111111111111111111111111111111
BadBinaryLiterals.java:15:27: compiler.err.expected: ';'
BadBinaryLiterals.java:16:27: compiler.err.expected: ';'
BadBinaryLiterals.java:16:30: compiler.err.expected: token.identifier
6 errors
